# tom_fink

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: github-release.yml  run-canary-tests.yml  run-tests.yml
tom_fink/: __init__.py  alertstream.py  apps.py  fink.py
tom_fink/templates/tom_fink/partials/: fink_advanced_form.html  fink_simple_form.html
tom_fink/tests/: boot_django.py  django_shell.py  run_canary_tests.py  run_tests.py  tests.py  tests_canary.py
